--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+## 1.1.5
+- Tag Optimization
+
+## 1.1.4
+- Deleted Previous Homepage in Package.json
+
 ## 1.1.3
-- Added Changelog
+- Added Change-log
 - Added Homepage
